--- a/sikimosya/html/contact.html
+++ b/sikimosya/html/contact.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>インフォメーション-株式会社四季の杜</title>
+  <title>お問い合わせ-株式会社四季の杜</title>
   <script src="https://kit.fontawesome.com/8e2702973d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/information.css">
+  <link rel="stylesheet" href="../css/contact.css">
   <link rel="stylesheet" href="../css/lightbox.min.css">
   <link href="https://fonts.cdnfonts.com/css/01-digitmono" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
@@ -85,12 +85,12 @@
       </div>
     </header>
   
-    <div class="information-main-img">
-      <div class="information-main-text">
+    <div class="contact-main-img">
+      <div class="contact-main-text">
         <p>
-          インフォメーション
+          お問い合わせ
           <br>
-          <span>-INFORMATION-</span>
+          <span>-contact-</span>
         </p>
       </div>
     </div>
@@ -136,44 +136,11 @@
         </p>
         </div>
       </div>
-      <div class="information-page">
-      <section class="info">
-        <div>
-        <p class="title-info">infomation</p>
-        <h2 class="info-heading">
-          インフォメーション
-        </h2>
-        <ul class="info-text">
-          <li>
-            <span>2023/12/02</span>
-            四季の杜最新のチラシ情報を公開しました。
-          </li>
-          <li>
-            <span>2023/10/07</span>
-            四季の杜最新のチラシ情報を公開しました。
-          </li>
-          <li>
-            <span>2023/06/01</span>
-            ホームページをリニューアルしました。
-          </li>
-        </ul>
-        </div>
-      </section>
-
-      <footer>
-        <div class="page-footer">
-          <div class="footer-text">
-            <h2>お電話でのお問い合わせ</h2>
-            <p><i class="fa-solid fa-phone"></i>0296-26-7101</p>
-          </div>
-          <div class="footer-contact">
-            <p><i class="fa-regular fa-envelope"></i>メールでのお問い合わせ</p>
-          </div>
-        </div>
-        <div class="copyright">
-          <p>株式会社 四季の杜. All Rights Reserved.</p>
-        </div>
-      </footer>
-      </div>
-</body>
-</body>
+      
+      <div class="contact-page">
+        <section class="contact">
+          <div class="contact-inner">
+            <h2 class="contact-inner-text">
+              <p>contact</p>
+              お問い合わせ
+            </h2>
