--- a/sikimosya/html/flow.html
+++ b/sikimosya/html/flow.html
@@ -38,7 +38,7 @@
             <div class="header-nav-tel-icon"><a class="header-nav-tel-link" href="#"><i class="fa-solid fa-phone"></i><p>0296-26-7101</p></a></div>
           </li>
           <li class="header-nav-contact">
-            <div class="header-nav-contact-icon"><a class="header-nav-contact-link" href="#"><i class="fa-regular fa-envelope"></i></a></div>
+            <div class="header-nav-contact-icon"><a class="header-nav-contact-link" href="contact.html"><i class="fa-regular fa-envelope"></i></a></div>
           </li>
           <li class="close"><span>閉じる</span></li>
         </ul>
@@ -122,7 +122,7 @@
         </ul>
         <ul class="side_contact">
           <li><i class="fa-solid fa-phone"></i>0296-26-7101</li>
-          <li><i class="fa-regular fa-envelope"></i>メールでのお問い合わせ</li>
+          <li><a href="contact.html"><i class="fa-regular fa-envelope"></i>メールでのお問い合わせ</li></a>
         </ul>
       <div class="side_contact2">
         <p>
