--- a/sikimosya/html/contact.html
+++ b/sikimosya/html/contact.html
@@ -167,7 +167,7 @@
               お問い合わせ
             </h2>
             <div>
-              <form action="contact.html" method="post"></form>
+              <form action="contact.html" method="post">
               <div class="contact-form">
                 お名前（姓名）
                 <span class="text-red">必須</span>
@@ -200,6 +200,7 @@
                 <textarea name="お問い合わせ内容" rows="10" cols="60" placeholder="お問い合わせ内容をご入力ください。"></textarea>
                 <input type="submit" name="確認" value="確認画面へ">
               </div>
+              </form>
             </div>
           </div>
         </section>
